fix overflow select component

--- a/src/components/dls/Forms/Select/Select.module.scss
+++ b/src/components/dls/Forms/Select/Select.module.scss
@@ -42,10 +42,15 @@
   inset-inline-end: 0;
   pointer-events: none;
   display: flex;
+  background: var(--color-background-default);
   -webkit-box-align: center;
   align-items: center;
   -webkit-box-pack: center;
   justify-content: center;
+
+  .withBackground & {
+    background: var(--color-background-alternative-faded);
+  }
 
   > svg {
     color: currentcolor;
